--- a/popup/style.scss
+++ b/popup/style.scss
@@ -121,10 +121,10 @@
 
       .pron-uk,
       .pron-uk.icon-audio {
-        background-image: url(/materials/imgs/audio_bre_initial.svg);
+        background-image: url(/common/imgs/audio_bre_initial.svg);
 
         &:hover {
-          background-image: url(/materials/imgs/audio_bre_playing.svg);
+          background-image: url(/common/imgs/audio_bre_playing.svg);
           -webkit-transition: background-image 100ms linear;
           -o-transition: background-image 100ms linear;
           transition: background-image 100ms linear;
@@ -133,10 +133,10 @@
 
       .pron-us,
       .pron-us.icon-audio {
-        background-image: url(/materials/imgs/audio_name_initial.svg);
+        background-image: url(/common/imgs/audio_name_initial.svg);
 
         &:hover {
-          background-image: url(/materials/imgs/audio_name_playing.svg);
+          background-image: url(/common/imgs/audio_name_playing.svg);
           -webkit-transition: background-image 100ms linear;
           -o-transition: background-image 100ms linear;
           transition: background-image 100ms linear;
@@ -228,7 +228,7 @@
           background-position: center bottom;
           width: 14px;
           height: 14px;
-          background-image: url(/materials/imgs/icon-plus-minus-orange.png);
+          background-image: url(/common/imgs/icon-plus-minus-orange.png);
           background-size: 100% auto;
           content: "";
           display: inline-block;
@@ -304,19 +304,19 @@ table td {
 
 .ox3ksym_a1,
 .ox3ksymsub_a1 {
-  background-image: url(/materials/imgs/ox3000_a1.svg);
+  background-image: url(/common/imgs/ox3000_a1.svg);
 
   &:hover {
-    background-image: url(/materials/imgs/ox3000_a1_hover.svg);
+    background-image: url(/common/imgs/ox3000_a1_hover.svg);
   }
 }
 
 .ox3ksym_a2,
 .ox3ksymsub_a2 {
-  background-image: url(/materials/imgs/ox3000_a2.svg);
+  background-image: url(/common/imgs/ox3000_a2.svg);
 
   &:hover {
-    background-image: url(/materials/imgs/ox3000_a2_hover.svg);
+    background-image: url(/common/imgs/ox3000_a2_hover.svg);
     -webkit-transition: background-image 100ms linear;
     -o-transition: background-image 100ms linear;
     transition: background-image 100ms linear;
@@ -325,91 +325,91 @@ table td {
 
 .ox5ksym_a1,
 .ox5ksymsub_a1 {
-  background-image: url(/materials/imgs/ox5000_a1.svg);
+  background-image: url(/common/imgs/ox5000_a1.svg);
 
   &:hover {
-    background-image: url(/materials/imgs/ox5000_a1_hover.svg);
+    background-image: url(/common/imgs/ox5000_a1_hover.svg);
   }
 }
 
 .ox5ksym_a2,
 .ox5ksymsub_a2 {
-  background-image: url(/materials/imgs/ox5000_a2.svg);
+  background-image: url(/common/imgs/ox5000_a2.svg);
 
   &:hover {
-    background-image: url(/materials/imgs/ox5000_a2_hover.svg);
+    background-image: url(/common/imgs/ox5000_a2_hover.svg);
   }
 }
 
 .ox3ksym_b1,
 .ox3ksymsub_b1 {
-  background-image: url(/materials/imgs/ox3000_b1.svg);
+  background-image: url(/common/imgs/ox3000_b1.svg);
 
   &:hover {
-    background-image: url(/materials/imgs/ox3000_b1_hover.svg);
+    background-image: url(/common/imgs/ox3000_b1_hover.svg);
   }
 }
 
 .ox3ksym_b2,
 .ox3ksymsub_b2 {
-  background-image: url(/materials/imgs/ox3000_b2.svg);
+  background-image: url(/common/imgs/ox3000_b2.svg);
 
   &:hover {
-    background-image: url(/materials/imgs/ox3000_b2_hover.svg);
+    background-image: url(/common/imgs/ox3000_b2_hover.svg);
   }
 }
 
 .ox5ksym_b1,
 .ox5ksymsub_b1 {
-  background-image: url(/materials/imgs/ox5000_b1.svg);
+  background-image: url(/common/imgs/ox5000_b1.svg);
 
   &:hover {
-    background-image: url(/materials/imgs/ox5000_b1_hover.svg);
+    background-image: url(/common/imgs/ox5000_b1_hover.svg);
   }
 }
 
 .ox5ksym_b2,
 .ox5ksymsub_b2 {
-  background-image: url(/materials/imgs/ox5000_b2.svg);
+  background-image: url(/common/imgs/ox5000_b2.svg);
 
   &:hover {
-    background-image: url(/materials/imgs/ox5000_b2_hover.svg);
+    background-image: url(/common/imgs/ox5000_b2_hover.svg);
   }
 }
 
 .ox3ksym_c1,
 .oxksymsub_c1 {
-  background-image: url(/materials/imgs/ox3000_c1.svg);
+  background-image: url(/common/imgs/ox3000_c1.svg);
 
   &:hover {
-    background-image: url(/materials/imgs/ox3000_c1_hover.svg);
+    background-image: url(/common/imgs/ox3000_c1_hover.svg);
   }
 }
 
 .ox3ksym_c2,
 .ox3ksymsub_c2 {
-  background-image: url(/materials/imgs/ox3000_c2.svg);
+  background-image: url(/common/imgs/ox3000_c2.svg);
 
   &:hover {
-    background-image: url(/materials/imgs/ox3000_c2_hover.svg);
+    background-image: url(/common/imgs/ox3000_c2_hover.svg);
   }
 }
 
 .ox5ksym_c1,
 .ox5ksymsub_c1 {
-  background-image: url(/materials/imgs/ox5000_c1.svg);
+  background-image: url(/common/imgs/ox5000_c1.svg);
 
   &:hover {
-    background-image: url(/materials/imgs/ox5000_c1_hover.svg);
+    background-image: url(/common/imgs/ox5000_c1_hover.svg);
   }
 }
 
 .ox5ksym_c1,
 .ox5ksymsub_c1 {
-  background-image: url(/materials/imgs/ox5000_c1.svg);
+  background-image: url(/common/imgs/ox5000_c1.svg);
 
   &:hover {
-    background-image: url(/materials/imgs/ox5000_c1_hover.svg);
+    background-image: url(/common/imgs/ox5000_c1_hover.svg);
   }
 }
 
@@ -492,7 +492,7 @@ table td {
       user-select: none;
 
       &:after {
-        background-image: url(/materials/imgs/external-link-icon.png);
+        background-image: url(/common/imgs/external-link-icon.png);
         background-repeat: no-repeat;
         height: 15px;
         width: 15px;
@@ -569,4 +569,56 @@ html {
   // ::-webkit-resizer {
   //   background: palevioletred;
   // }
+}
+
+hr {
+  margin: 5px 0 0;
+  height: 1px;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+  background: #b9b9b9;
+  overflow: hidden;
+}
+.sentences {
+  position: relative;
+
+  .trans {
+    color: #24212f;
+    font-size: 15px;
+    word-break: break-word;
+  }
+}
+
+.dicts {
+  position: relative;
+  .dict {
+    padding-top: 5px;
+    padding-bottom: 2px;
+
+    .pos {
+      font-weight: bold;
+      font-style: italic;
+      text-transform: capitalize;
+    }
+
+    .terms {
+      padding-top: 3px;
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0 -2px;
+
+      .term {
+        width: fit-content;
+        padding: 2px 3px 1px;
+        border-radius: 5px;
+        background-color: #d4d4d4;
+        margin: 0 2px;
+      }
+    }
+  }
+}
+
+.hide {
+  display: none !important;
 }
