--- a/popup/style.scss
+++ b/popup/style.scss
@@ -33,7 +33,7 @@
   display: block;
 
   .headword {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     font-weight: 600;
     display: inline-block;
     margin: 0rem 0rem 0rem 0rem;
@@ -41,7 +41,7 @@
   }
 
   .pos {
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: 400;
     font-style: italic;
     margin: 0rem 0rem 0rem 0.25rem;
@@ -49,16 +49,16 @@
   }
 
   .symbols {
-    margin: 0.5rem 0rem 0.5rem 0rem;
+    margin: 0.2rem 0rem 0.2rem 0rem;
 
     a {
       display: inline-block;
       background-repeat: no-repeat;
-      line-height: 1.5rem;
-      min-width: 3rem;
+      line-height: 1;
+      width: fit-content;
       vertical-align: middle;
       cursor: pointer;
-      margin: 0rem 0.5rem 0rem 0rem;
+      margin: 0rem 0.2rem 0rem 0rem;
       text-decoration: none;
       color: #004aac;
 
@@ -74,23 +74,23 @@
       span {
         display: inline-block;
         background-repeat: no-repeat;
-        line-height: 1.5rem;
-        min-width: 3rem;
+        line-height: 1;
+        min-width: 2rem;
         vertical-align: middle;
         cursor: pointer;
 
         &.opal_symbol {
           display: inline-block;
           background-color: #526983;
-          width: -webkit-max-content;
-          width: -moz-max-content;
-          width: max-content;
-          border-radius: 50px;
-          padding: 0px 15px;
+          width: -webkit-fit-content;
+          width: -moz-fit-content;
+          width: fit-content;
+          border-radius: 7px;
+          padding: 0px 5px;
           color: #ffffff;
-          line-height: 1.5rem;
+          line-height: 1.05rem;
           font-weight: 600;
-          font-size: 14px;
+          font-size: 0.7rem;
           -webkit-transition: background-image 100ms linear;
           -o-transition: background-image 100ms linear;
           transition: background-image 100ms linear;
@@ -104,6 +104,8 @@
   }
 
   .phonetics {
+    font-size: 1rem;
+
     div {
       margin-bottom: 2px;
       margin-top: 2px;
@@ -142,10 +144,9 @@
           transition: background-image 100ms linear;
         }
       }
-
-      .phon {
+      .verb_form .phon {
         font-family: "Lucida Sans Unicode", "Lucida Grande";
-        font-size: 1rem;
+        font-size: 0.85rem;
         font-weight: 400;
         color: #333333;
       }
@@ -158,16 +159,17 @@
 
   .variants {
     font-style: italic;
-    color: #6f6f6f;
-    margin: 0rem 0rem 0.5rem 0rem;
   }
 
   .inflections {
-    color: #6f6f6f;
+    position: relative;
   }
 
   .variants,
   .inflections {
+    color: #6f6f6f;
+    margin: 0;
+    font-size: 0.9rem;
     .eb,
     .v-g,
     .inflected_form {
@@ -190,18 +192,23 @@
   .grammar {
     color: #6f6f6f;
     font-weight: 400;
+    font-size: 0.8rem;
   }
 
-  .labels {
+  > .labels {
     color: #6f6f6f;
     font-style: italic;
     font-weight: 400;
+    font-size: 0.9rem;
   }
 
   .collapse {
     background-color: #faded7;
     border-left: 0.1875rem solid #f08b6e;
-    margin: 0.5rem 0rem 0.5rem 0rem;
+    border-right: 1px solid #f08b6e;
+    border-top: 1px solid #f08b6e;
+    border-bottom: 1px solid #f08b6e;
+    margin: 0.1rem 0rem 0rem 0rem;
     display: inline-block;
     width: 100%;
 
@@ -212,8 +219,8 @@
 
       .box_title {
         display: block;
-        padding: 0.5rem 1rem 0.5rem 1rem;
-        font-size: 1.125rem;
+        padding: 0.2rem 0.3rem 0.2rem 0.4rem;
+        font-size: 0.95rem;
         cursor: pointer;
         -webkit-transition: background-color 100ms linear;
         -o-transition: background-color 100ms linear;
@@ -250,7 +257,7 @@
       }
 
       .body {
-        padding: 1rem;
+        padding: 0.1rem 0.5rem;
         background-color: #fdf3f0;
         display: block;
       }
@@ -260,16 +267,32 @@
       }
     }
   }
+
+  .un {
+    background-color: #f8e6db;
+    padding: 5px;
+    display: block;
+    border: 1px solid #ffc7b6;
+    margin-bottom: 2px;
+    font-size: 0.8rem;
+
+    .eb {
+      font-weight: 600;
+      font-style: normal;
+      color: #1a3561;
+    }
+  }
 }
 
 .verb_form {
   font-weight: 600;
   color: #1a3561;
   display: block;
+  font-size: 0.9rem;
 }
 
 tr.verb_form {
-  margin: 0.5rem 0rem;
+  margin: 0.1rem 0rem;
 }
 
 table td {
@@ -295,6 +318,7 @@ table td {
 .ox3ksym_b2,
 .ox3ksym_c1,
 .ox3ksym_c2 {
+  background-size: contain;
   &:hover {
     -webkit-transition: background-image 100ms linear;
     -o-transition: background-image 100ms linear;
@@ -476,8 +500,9 @@ table td {
 
     .field-name {
       padding: 0 5px 5px;
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: bold;
+      color: #0013f1;
     }
 
     .dictlick {
@@ -585,7 +610,7 @@ hr {
 
   .trans {
     color: #24212f;
-    font-size: 15px;
+    font-size: 0.9rem;
     word-break: break-word;
   }
 }
@@ -600,6 +625,7 @@ hr {
       font-weight: bold;
       font-style: italic;
       text-transform: capitalize;
+      font-size: 0.75rem;
     }
 
     .terms {
@@ -607,13 +633,15 @@ hr {
       display: flex;
       flex-wrap: wrap;
       margin: 0 -2px;
+      font-size: 0.75rem;
 
       .term {
         width: fit-content;
         padding: 2px 3px 1px;
         border-radius: 5px;
         background-color: #d4d4d4;
-        margin: 0 2px;
+        margin: 1px 2px;
+        font-size: inherit;
       }
     }
   }
