--- a/popup/style.scss
+++ b/popup/style.scss
@@ -107,8 +107,8 @@
     font-size: 1rem;
 
     div {
-      margin-bottom: 2px;
-      margin-top: 2px;
+      // margin-bottom: 2px;
+      // margin-top: 2px;
 
       div {
         display: inline-block;
