--- a/popup/style.scss
+++ b/popup/style.scss
@@ -1,3 +1,7 @@
+#ring-links-box{
+	display: none;
+}
+
 .selection {
 	position: relative;
 	display: flex;
@@ -695,6 +699,14 @@ hr {
 			display: block;
 		}
 
+		.p {
+			margin-bottom: 0.5rem;
+			display: inline-block;
+			margin-left: 8px;
+			margin-right: 8px;
+			text-align: justify;
+		}
+
 		ul.examples {
 			background-color: #fdf3f0;
 			display: block !important;
@@ -717,6 +729,11 @@ span[unbox="wordfinder"] ul.bullet li.li {
 
 .topic-g {
 	display: none;
+}
+
+.ndv {
+	color: #00860e;
+	cursor: pointer;
 }
 
 .collocs_list li {
