popup, fix error on detail button

--- a/popup/style.scss
+++ b/popup/style.scss
@@ -446,7 +446,7 @@ table td {
 		.dictlick {
 			display: none;
 			position: absolute;
-			top: -4%;
+			top: -1.2rem;
 			right: 4px;
 			background-color: white;
 			padding: 0 5px;
